--- a/index.html
+++ b/index.html
@@ -537,20 +537,24 @@ header {
 <p><strong><a href="https://www.dimokritosrealestate.gr/" rel="noopener noreferrer" target="_blank">Актуални оферти за недвижими имоти в Гърция / Τρέχουσες προσφορές ακινήτων στην Ελλάδα</a></strong></p>
 </section>
 <section id="prices">
+<section id="prices">
 <h2 class="section-title">Заявете превод сега / Ζητήστε προσφορά μετάφρασης τώρα</h2>
-<form action="https://formbold.com/s/3OGZ0" enctype="multipart/form-data" method="POST"><input name="disableCaptcha" type="hidden" value="true"/>
-<input name="Име / Όνομα" placeholder="Вашето име / Το όνομα σας" required="" type="text"/>
+<form action="https://formspree.io/f/movwnrdg" enctype="multipart/form-data" method="POST">
+<input name="Име / Όνομα" placeholder="Вашето име / Το όνομά σας" required="" type="text"/>
 <input name="Имейл / Email" placeholder="Вашият имейл / Το email σας" required="" type="email"/>
 <input name="Телефон / Τηλέφωνο" placeholder="Телефон / Τηλέφωνο" required="" type="tel"/>
 <textarea name="Описание / Περιγραφή" placeholder="Опишете какво желаете / Περιγράψτε τι χρειάζεστε" required="" rows="4"></textarea>
-<input name="Файл / Αρχείο" required="" type="file"/>
+<input accept=".pdf,.doc,.docx,.jpg,.png" name="file" required="" type="file"/>
 <label class="gdpr-label">
 <input name="gdpr" required="" type="checkbox"/>
-        Съгласен/на съм / Συμφωνώ с <a href="privacy.html" target="_blank">Политиката за поверителност / Πολιτική απορρήτου</a>
+      Съгласен/на съм / Συμφωνώ с <a href="privacy.html" target="_blank">Политиката за поверителност / Πολιτική απορρήτου</a>
 </label>
 <input name="_redirect" type="hidden" value="thanks.html"/>
+<input name="_captcha" type="hidden" value="false"/>
+<input name="_subject" type="hidden" value="Нова заявка за превод / Νέο αίτημα για μετάφραση"/>
 <button type="submit">Изпрати заявка / Αποστολή αίτησης</button>
 </form>
+</section>
 </section>
 <section id="testimonials">
 <h2 class="section-title">Мнения на клиенти /  Αξιολογήσεις πελατών</h2>
@@ -570,15 +574,15 @@ header {
 <h3>🗣️ Споделете вашето мнение / Αφήστε την αξιολόγηση σας</h3>
 <form action="https://formspree.io/f/movwnrdg" enctype="multipart/form-data" method="POST">
 <input name="_captcha" type="hidden" value="false"/>
-<input name="Име/Όνομα" placeholder="Вашето име / Το όνομα σας" required="" type="text"/>
+<input name="Име/Όνομα" placeholder="Вашето име / Το όνομα σας" required="" type="text">
 <textarea name="Мнение/Αξιολόγηση" placeholder="Вашето мнение / Η αξιολόγηση σας" required="" rows="4"></textarea>
 <label class="gdpr-label">
-<input name="gdpr" required="" type="checkbox">
+<input name="gdpr" required="" type="checkbox"/>
   Съгласен/на съм / Συμφωνώ με την <a href="privacy.html" target="_blank">Политиката за поверителност / Πολιτική απορρήτου</a>
-</input></label>
+</label>
 <button type="submit">Изпрати / Αποστολή</button>
 <input name="_subject" type="hidden" value="Ново клиентско мнение / Νέα αξιολόγηση πελάτη"/>
-</form>
+</input></form>
 </div>
 </section>
 <section id="contact">
