--- a/index.html
+++ b/index.html
@@ -537,9 +537,11 @@ header {
 <p><strong><a href="https://www.dimokritosrealestate.gr/" rel="noopener noreferrer" target="_blank">Актуални оферти за недвижими имоти в Гърция / Τρέχουσες προσφορές ακινήτων στην Ελλάδα</a></strong></p>
 </section>
 <section id="prices">
-<section id="prices">
-<h2 class="section-title">Заявете превод сега / Ζητήστε προσφορά μετάφρασης τώρα</h2>
-<form action="https://formspree.io/f/movwnrdg" enctype="multipart/form-data" method="POST">
+<h2 class="section-title">Цени / Τιμές</h2>
+<p>Предлагам конкурентни цени за качествени преводи. Всеки проект се оценява индивидуално според обема, сложността и срока за изпълнение.</p>
+<p>Προσφέρω ανταγωνιστικές τιμές για ποιοτικές μεταφράσεις. Κάθε έργο αξιολογείται ξεχωριστά ανάλογα με τον όγκο, τη δυσκολία και τον χρόνο παράδοσης.</p>
+<h3 style="margin-top: 2rem;">📩 Заявете превод онлайн / Υποβάλετε αίτημα για μετάφραση</h3>
+<form action="https://formsubmit.co/mollovplamen@gmail.com" enctype="multipart/form-data" method="POST">
 <input name="Име / Όνομα" placeholder="Вашето име / Το όνομά σας" required="" type="text"/>
 <input name="Имейл / Email" placeholder="Вашият имейл / Το email σας" required="" type="email"/>
 <input name="Телефон / Τηλέφωνο" placeholder="Телефон / Τηλέφωνο" required="" type="tel"/>
@@ -549,13 +551,13 @@ header {
 <input name="gdpr" required="" type="checkbox"/>
       Съгласен/на съм / Συμφωνώ с <a href="privacy.html" target="_blank">Политиката за поверителност / Πολιτική απορρήτου</a>
 </label>
-<input name="_redirect" type="hidden" value="thanks.html"/>
 <input name="_captcha" type="hidden" value="false"/>
+<input name="_next" type="hidden" value="thanks.html"/>
 <input name="_subject" type="hidden" value="Нова заявка за превод / Νέο αίτημα για μετάφραση"/>
-<button type="submit">Изпрати заявка / Αποστολή αίτησης</button>
+<button type="submit">📤 Изпрати заявка / Αποστολή αίτησης</button>
 </form>
 </section>
-</section>
+
 <section id="testimonials">
 <h2 class="section-title">Мнения на клиенти /  Αξιολογήσεις πελατών</h2>
 <div class="testimonial">
@@ -574,7 +576,7 @@ header {
 <h3>🗣️ Споделете вашето мнение / Αφήστε την αξιολόγηση σας</h3>
 <form action="https://formspree.io/f/movwnrdg" enctype="multipart/form-data" method="POST">
 <input name="_captcha" type="hidden" value="false"/>
-<input name="Име/Όνομα" placeholder="Вашето име / Το όνομα σας" required="" type="text">
+<input name="Име/Όνομα" placeholder="Вашето име / Το όνομα σας" required="" type="text"/>
 <textarea name="Мнение/Αξιολόγηση" placeholder="Вашето мнение / Η αξιολόγηση σας" required="" rows="4"></textarea>
 <label class="gdpr-label">
 <input name="gdpr" required="" type="checkbox"/>
@@ -582,7 +584,7 @@ header {
 </label>
 <button type="submit">Изпрати / Αποστολή</button>
 <input name="_subject" type="hidden" value="Ново клиентско мнение / Νέα αξιολόγηση πελάτη"/>
-</input></form>
+</form>
 </div>
 </section>
 <section id="contact">
