--- a/index.html
+++ b/index.html
@@ -435,7 +435,129 @@ header {
 }
 
 </style><link href="https://fonts.googleapis.com/css2?family=Parisienne&amp;display=swap" rel="stylesheet"/><link href="https://fonts.googleapis.com/css2?family=Noto+Serif&amp;display=swap" rel="stylesheet"/>
-</head>
+<style>
+/* Responsive форма */
+#prices form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 1rem;
+}
+#prices input, #prices textarea, #prices button, #prices label {
+  font-size: 1rem;
+  padding: 0.6rem;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  width: 100%;
+  box-sizing: border-box;
+}
+#prices button {
+  background-color: #003366;
+  color: white;
+  font-weight: bold;
+  cursor: pointer;
+  border: none;
+}
+#prices button:hover {
+  background-color: #0055a5;
+}
+#prices .gdpr-label {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  font-size: 0.9rem;
+}
+
+/* Responsive заглавие и текст */
+#prices h2, #prices p, #prices h3 {
+  text-align: center;
+  margin-bottom: 1rem;
+}
+@media (max-width: 600px) {
+  #prices h2, #prices p, #prices h3 {
+    font-size: 1.1rem;
+  }
+  #prices input, #prices textarea, #prices button {
+    font-size: 0.95rem;
+  }
+}
+</style><style>
+/* По-елегантна форма и секция */
+#prices {
+  background: linear-gradient(to bottom, #f7faff, #ffffff);
+  padding: 3rem 1rem;
+  border-radius: 12px;
+  box-shadow: 0 8px 20px rgba(0,0,0,0.05);
+  margin: 2rem auto;
+  max-width: 900px;
+}
+#prices h2 {
+  font-size: 2rem;
+  color: #003366;
+  margin-bottom: 1rem;
+}
+#prices h3 {
+  font-size: 1.4rem;
+  color: #003366;
+}
+#prices p {
+  font-size: 1.1rem;
+  color: #333;
+}
+#prices form {
+  display: flex;
+  flex-direction: column;
+  gap: 1.2rem;
+  max-width: 600px;
+  margin: 2rem auto 0;
+  padding: 1.5rem;
+  background: #fff;
+  border: 1px solid #dde3ed;
+  border-radius: 10px;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.06);
+}
+#prices input, #prices textarea, #prices button {
+  font-size: 1rem;
+  padding: 0.75rem 1rem;
+  border: 1px solid #ccc;
+  border-radius: 6px;
+  width: 100%;
+  box-sizing: border-box;
+}
+#prices input:focus, #prices textarea:focus {
+  border-color: #0077cc;
+  outline: none;
+}
+#prices button {
+  background-color: #003366;
+  color: white;
+  font-weight: bold;
+  cursor: pointer;
+  transition: background 0.3s;
+}
+#prices button:hover {
+  background-color: #0055a5;
+}
+#prices .gdpr-label {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  font-size: 0.95rem;
+}
+@media (max-width: 768px) {
+  #prices {
+    padding: 2rem 1rem;
+  }
+  #prices h2 {
+    font-size: 1.5rem;
+  }
+  #prices form {
+    padding: 1rem;
+  }
+}
+</style></head>
 <body>
 <header><span class="welcome-text welcome-right">Καλώς ήρθατε</span><span class="welcome-text welcome-left">Добре дошли</span>
 <img alt="Plamen Mollov Logo" src="assets/images/logo.png"/>
@@ -554,10 +676,9 @@ header {
 <input name="_captcha" type="hidden" value="false"/>
 <input name="_next" type="hidden" value="thanks.html"/>
 <input name="_subject" type="hidden" value="Нова заявка за превод / Νέο αίτημα για μετάφραση"/>
-<button type="submit">📤 Изпрати заявка / Αποστολή αίτησης</button>
+<button id="submit-btn" type="submit">📤 Изпрати заявка / Αποστολή αίτησης</button>
 </form>
 </section>
-
 <section id="testimonials">
 <h2 class="section-title">Мнения на клиенти /  Αξιολογήσεις πελατών</h2>
 <div class="testimonial">
@@ -644,5 +765,13 @@ document.addEventListener("DOMContentLoaded", function () {
   });
 });
 </script>
-</body>
+<script>
+    const form = document.querySelector('form');
+    const button = document.getElementById('submit-btn');
+    form.addEventListener('submit', () => {
+      button.disabled = true;
+      button.innerText = "Изпращане... / Αποστολή...";
+      button.style.opacity = "0.7";
+    });
+    </script></body>
 </html>
