--- a/index.html
+++ b/index.html
@@ -708,7 +708,6 @@ label[for="file"]:hover {
 <p>Предлагам конкурентни цени за качествени преводи. Всеки проект се оценява индивидуално според обема, сложността и срока за изпълнение.</p>
 <p>Προσφέρω ανταγωνιστικές τιμές για ποιοτικές μεταφράσεις. Κάθε έργο αξιολογείται ξεχωριστά ανάλογα με τον όγκο, τη δυσκολία και τον χρόνο παράδοσης.</p>
 <h3 style="margin-top: 2rem;">📩 Заявете превод онлайн / Υποβάλετε αίτημα για μετάφραση</h3>
-
 <style>
       form {
         background: #fff;
@@ -768,11 +767,10 @@ label[for="file"]:hover {
 <input accept=".pdf,.doc,.docx,.jpg,.png" id="file" name="file" required="" type="file"/>
 <label class="checkbox-label">
 <input name="gdpr" required="" type="checkbox"/>
-        Съгласен съм с политиката за поверителност / Συμφωνώ με την πολιτική απορρήτου
-      </label>
+        Съгласен съм с <a href="privacy.html" target="_blank">политиката за поверителност / πολιτική απορρήτου</a>
+</label>
 <button type="submit">📤 Изпрати заявка / Υποβολή αιτήματος</button>
 </form>
-
 </section>
 <section id="testimonials">
 <h2 class="section-title">Мнения на клиенти /  Αξιολογήσεις πελατών</h2>
