--- a/privacy.html
+++ b/privacy.html
@@ -4,17 +4,54 @@
 <head>
   <meta charset="UTF-8">
   <title>Политика за поверителност / Πολιτική απορρήτου</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    body { font-family: sans-serif; margin: 2rem; line-height: 1.6; }
-    h1 { color: #003366; }
-    h2 { margin-top: 2rem; }
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      line-height: 1.7;
+      padding: 2rem;
+      max-width: 800px;
+      margin: auto;
+      background: #f9f9f9;
+    }
+    h1 {
+      text-align: center;
+      color: #003366;
+    }
+    h2 {
+      margin-top: 2rem;
+      color: #004080;
+    }
+    p {
+      margin-bottom: 1rem;
+    }
   </style>
 </head>
 <body>
-  <h1>Политика за поверителност</h1>
-  <p>Събираме лични данни (напр. име, имейл, мнение), единствено с цел обратна връзка и комуникация. Данните не се споделят с трети страни и се съхраняват сигурно. Можете да поискате тяхното изтриване по всяко време, като се свържете с нас.</p>
+  <h1>Политика за поверителност / Πολιτική απορρήτου</h1>
 
-  <h1>Πολιτική απορρήτου</h1>
-  <p>Συλλέγουμε προσωπικά δεδομένα (όνομα, email, αξιολόγηση) αποκλειστικά για σκοπούς επικοινωνίας. Τα δεδομένα δεν κοινοποιούνται σε τρίτους και αποθηκεύονται με ασφάλεια. Μπορείτε να ζητήσετε τη διαγραφή τους οποιαδήποτε στιγμή επικοινωνώντας μαζί μας.</p>
+  <h2>1. Защита на личните данни / Προστασία προσωπικών δεδομένων</h2>
+  <p>
+    Ние се ангажираме да защитаваме вашата лична информация. Всички данни, предоставени чрез тази форма, ще се използват единствено за обработка на вашата заявка.
+  </p>
+  <p>
+    Δεσμευόμαστε να προστατεύουμε τα προσωπικά σας δεδομένα. Όλες οι πληροφορίες που παρέχονται μέσω αυτής της φόρμας θα χρησιμοποιηθούν αποκλειστικά για την επεξεργασία του αιτήματός σας.
+  </p>
+
+  <h2>2. Съхранение на информация / Αποθήκευση πληροφοριών</h2>
+  <p>
+    Вашите данни няма да бъдат споделяни с трети страни и се съхраняват сигурно за необходимия срок, за да бъде завършена услугата.
+  </p>
+  <p>
+    Τα δεδομένα σας δεν θα κοινοποιηθούν σε τρίτους και θα αποθηκευτούν με ασφάλεια για την απαιτούμενη χρονική περίοδο ώστε να ολοκληρωθεί η υπηρεσία.
+  </p>
+
+  <h2>3. Контакт / Επικοινωνία</h2>
+  <p>
+    Ако имате въпроси относно нашата политика за поверителност, моля свържете се с нас на: mollovplamen@gmail.com
+  </p>
+  <p>
+    Εάν έχετε ερωτήσεις σχετικά με την πολιτική απορρήτου, επικοινωνήστε μαζί μας στο: mollovplamen@gmail.com
+  </p>
 </body>
 </html>
