--- a/index.html
+++ b/index.html
@@ -752,7 +752,7 @@ label[for="file"]:hover {
         font-size: 0.95rem;
       }
     </style>
-<form action="https://formsubmit.co/mollovplamen@gmail.com" enctype="multipart/form-data" method="POST">
+<form action="thanks.html" enctype="multipart/form-data" method="POST">
 <input name="_next" type="hidden" value="thanks.html"/>
 <input name="_captcha" type="hidden" value="false"/>
 <label for="name">Име / Όνομα:</label>
@@ -767,7 +767,7 @@ label[for="file"]:hover {
 <input accept=".pdf,.doc,.docx,.jpg,.png" id="file" name="file" required="" type="file"/>
 <label class="checkbox-label">
 <input name="gdpr" required="" type="checkbox"/>
-        Съгласен съм с <a href="privacy.html" target="_blank">политиката за поверителност / πολιτική απορρήτου</a>
+        Съгласен съм с / Συμφωνω με την <a href="privacy.html" target="_blank">Политиката за поверителност / Πολιτική απορρήτου</a>
 </label>
 <button type="submit">📤 Изпрати заявка / Υποβολή αιτήματος</button>
 </form>
