--- a/index.html
+++ b/index.html
@@ -708,69 +708,46 @@ label[for="file"]:hover {
 <p>Предлагам конкурентни цени за качествени преводи. Всеки проект се оценява индивидуално според обема, сложността и срока за изпълнение.</p>
 <p>Προσφέρω ανταγωνιστικές τιμές για ποιοτικές μεταφράσεις. Κάθε έργο αξιολογείται ξεχωριστά ανάλογα με τον όγκο, τη δυσκολία και τον χρόνο παράδοσης.</p>
 <h3 style="margin-top: 2rem;">📩 Заявете превод онлайн / Υποβάλετε αίτημα για μετάφραση</h3>
+
 <style>
-      form {
-        background: #fff;
-        padding: 2rem;
-        border-radius: 12px;
-        box-shadow: 0 10px 30px rgba(0,0,0,0.07);
-        max-width: 600px;
-        margin: 2rem auto;
-        font-family: 'Segoe UI', sans-serif;
-      }
-      form label {
-        font-weight: 600;
-        display: block;
-        margin-top: 1.3rem;
-      }
-      form input, form textarea {
-        width: 100%;
-        padding: 0.75rem;
-        margin-top: 0.4rem;
-        border-radius: 8px;
-        border: 1px solid #ccc;
-        font-size: 1rem;
-      }
-      form button {
-        margin-top: 2rem;
-        padding: 1rem;
-        width: 100%;
-        background: linear-gradient(to right, #003366, #0066cc);
-        color: white;
-        font-weight: bold;
-        border: none;
-        font-size: 1.1rem;
-        border-radius: 10px;
-        cursor: pointer;
-        transition: background 0.3s ease;
-      }
-      form button:hover {
-        background: linear-gradient(to right, #004a99, #007fff);
-      }
-      .checkbox-label {
-        margin-top: 1.2rem;
-        font-size: 0.95rem;
-      }
-    </style>
-<form action="thanks.html" enctype="multipart/form-data" method="POST">
+  #file-name {
+    font-style: italic;
+    color: #333;
+    margin-top: 0.4rem;
+  }
+</style>
+<form action="https://formsubmit.co/mollovplamen@gmail.com" enctype="multipart/form-data" method="POST">
 <input name="_next" type="hidden" value="thanks.html"/>
 <input name="_captcha" type="hidden" value="false"/>
 <label for="name">Име / Όνομα:</label>
-<input id="name" name="name" placeholder="Вашето име / Το όνομά σας" required="" type="text"/>
+<input id="name" name="name" required="" type="text"/>
 <label for="email">Имейл / Email:</label>
-<input id="email" name="email" placeholder="имейл / ηλεκτρονικό ταχυδρομείο" required="" type="email"/>
+<input id="email" name="email" required="" type="email"/>
 <label for="phone">Телефон / Τηλέφωνο:</label>
-<input id="phone" name="phone" placeholder="телефон / τηλέφωνο" type="tel"/>
+<input id="phone" name="phone" type="tel"/>
 <label for="message">Описание / Περιγραφή:</label>
-<textarea id="message" name="message" placeholder="Описание на услугата / Περιγραφή της υπηρεσίας" required="" rows="4"></textarea>
+<textarea id="message" name="message" required="" rows="4"></textarea>
 <label for="file">📎 Прикачване на файл / Επισύναψη αρχείου:</label>
 <input accept=".pdf,.doc,.docx,.jpg,.png" id="file" name="file" required="" type="file"/>
+<p id="file-name"></p>
 <label class="checkbox-label">
 <input name="gdpr" required="" type="checkbox"/>
-        Съгласен съм с / Συμφωνω με την <a href="privacy.html" target="_blank">Политиката за поверителност / Πολιτική απορρήτου</a>
+    Съгласен съм с <a href="privacy.html" target="_blank">политиката за поверителност / πολιτική απορρήτου</a>
 </label>
 <button type="submit">📤 Изпрати заявка / Υποβολή αιτήματος</button>
 </form>
+<script>
+  const fileInput = document.getElementById('file');
+  const fileName = document.getElementById('file-name');
+  fileInput.addEventListener('change', () => {
+    if (fileInput.files.length > 0) {
+      fileName.textContent = "📎 Избран файл: " + fileInput.files[0].name;
+    } else {
+      fileName.textContent = "";
+    }
+  });
+</script>
+
 </section>
 <section id="testimonials">
 <h2 class="section-title">Мнения на клиенти /  Αξιολογήσεις πελατών</h2>
