--- a/index.html
+++ b/index.html
@@ -303,6 +303,8 @@ header {
   }
 }
 
+
+form + p { display: none; }
 </style>
 <style>
   .menu-toggle {
@@ -708,7 +710,6 @@ label[for="file"]:hover {
 <p>Предлагам конкурентни цени за качествени преводи. Всеки проект се оценява индивидуално според обема, сложността и срока за изпълнение.</p>
 <p>Προσφέρω ανταγωνιστικές τιμές για ποιοτικές μεταφράσεις. Κάθε έργο αξιολογείται ξεχωριστά ανάλογα με τον όγκο, τη δυσκολία και τον χρόνο παράδοσης.</p>
 <h3 style="margin-top: 2rem;">📩 Заявете превод онлайн / Υποβάλετε αίτημα για μετάφραση</h3>
-
 <style>
   #file-name {
     font-style: italic;
@@ -747,7 +748,6 @@ label[for="file"]:hover {
     }
   });
 </script>
-
 </section>
 <section id="testimonials">
 <h2 class="section-title">Мнения на клиенти /  Αξιολογήσεις πελατών</h2>
