--- a/index.html
+++ b/index.html
@@ -770,8 +770,7 @@ label[for="file"]:hover {
 <p>Предлагам конкурентни цени за качествени преводи. Всеки проект се оценява индивидуално според обема, сложността и срока за изпълнение.</p>
 <p>Προσφέρω ανταγωνιστικές τιμές για ποιοτικές μεταφράσεις. Κάθε έργο αξιολογείται ξεχωριστά ανάλογα με τον όγκο, τη δυσκολία και τον χρόνο παράδοσης.</p>
 <h3 style="margin-top: 2rem;">📩 Заявете превод онлайн / Υποβάλετε αίτημα για μετάφραση</h3>
-
-<form action="https://formsubmit.co/el/luvipu" enctype="multipart/form-data" method="POST">
+<form action="https://formsubmit.co/el/luvipu" enctype="multipart/form-data" method="POST"><input name="_next" type="hidden" value="https://www.prevodigr.eu/thanks.html"/><input name="_captcha" type="hidden" value="false"/>
 <input name="_next" type="hidden" value="https://www.prevodigr.eu/thanks.html"/>
 <input name="_captcha" type="hidden" value="false"/>
 <label for="name">Име / Όνομα:</label>
@@ -802,7 +801,6 @@ label[for="file"]:hover {
     }
   });
 </script>
-
 </section>
 <section id="testimonials">
 <h2 class="section-title">Мнения на клиенти /  Αξιολογήσεις πελατών</h2>
