--- a/index.html
+++ b/index.html
@@ -664,164 +664,6 @@ label[for="file"]:hover {
     color: #444;
   }
 </style>
-<style>
-  form {
-    background: #ffffff;
-    border-radius: 12px;
-    padding: 2rem;
-    box-shadow: 0 10px 30px rgba(0,0,0,0.05);
-    max-width: 620px;
-    margin: 3rem auto;
-    font-family: 'Segoe UI', sans-serif;
-  }
-  form label {
-    font-weight: 600;
-    display: block;
-    margin-top: 1.3rem;
-    color: #003366;
-  }
-  form input[type="text"],
-  form input[type="email"],
-  form input[type="file"],
-  form textarea {
-    width: 100%;
-    padding: 0.8rem;
-    margin-top: 0.3rem;
-    border-radius: 8px;
-    border: 1px solid #ccc;
-    font-size: 1rem;
-    background: #f9f9f9;
-  }
-  form input[type="file"] {
-    cursor: pointer;
-  }
-  form textarea {
-    resize: vertical;
-  }
-  form button {
-    margin-top: 2rem;
-    padding: 1rem;
-    width: 100%;
-    background: linear-gradient(to right, #00509e, #00aaff);
-    color: white;
-    font-weight: bold;
-    border: none;
-    font-size: 1.1rem;
-    border-radius: 10px;
-    cursor: pointer;
-    transition: background 0.3s ease;
-  }
-  form button:hover {
-    background: linear-gradient(to right, #004080, #0088cc);
-  }
-  #file-status {
-    font-style: italic;
-    margin-top: 0.5rem;
-    color: #444;
-  }
-</style>
-<style>
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      background: #f4f7fb;
-      padding: 2rem;
-    }
-    .container {
-      max-width: 600px;
-      background: #fff;
-      margin: auto;
-      padding: 2rem;
-      border-radius: 12px;
-      box-shadow: 0 0 20px rgba(0,0,0,0.05);
-    }
-    h1 {
-      text-align: center;
-      color: #003366;
-    }
-    label {
-      display: block;
-      margin-top: 1.2rem;
-      font-weight: 600;
-    }
-    input, textarea {
-      width: 100%;
-      padding: 0.8rem;
-      margin-top: 0.3rem;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      font-size: 1rem;
-      background: #f9f9f9;
-    }
-    button {
-      margin-top: 2rem;
-      width: 100%;
-      padding: 1rem;
-      background: linear-gradient(to right, #003366, #007acc);
-      color: white;
-      font-weight: bold;
-      border: none;
-      border-radius: 10px;
-      font-size: 1.1rem;
-      cursor: pointer;
-    }
-    button:hover {
-      background: linear-gradient(to right, #002244, #0055aa);
-    }
-    .file-status {
-      margin-top: 0.5rem;
-      font-size: 0.9rem;
-      font-style: italic;
-      color: #444;
-    }
-  </style>
-<style>
-  form {
-    background: #ffffff;
-    border-radius: 12px;
-    padding: 2rem;
-    box-shadow: 0 10px 30px rgba(0,0,0,0.05);
-    max-width: 640px;
-    margin: 3rem auto;
-    font-family: 'Segoe UI', sans-serif;
-  }
-  form label {
-    font-weight: 600;
-    display: block;
-    margin-top: 1.3rem;
-    color: #003366;
-  }
-  form input[type="text"],
-  form input[type="email"],
-  form input[type="tel"],
-  form textarea {
-    width: 100%;
-    padding: 0.8rem;
-    margin-top: 0.3rem;
-    border-radius: 8px;
-    border: 1px solid #ccc;
-    font-size: 1rem;
-    background: #f9f9f9;
-  }
-  form textarea {
-    resize: vertical;
-  }
-  form button {
-    margin-top: 2rem;
-    padding: 1rem;
-    width: 100%;
-    background: linear-gradient(to right, #00509e, #00aaff);
-    color: white;
-    font-weight: bold;
-    border: none;
-    font-size: 1.1rem;
-    border-radius: 10px;
-    cursor: pointer;
-    transition: background 0.3s ease;
-  }
-  form button:hover {
-    background: linear-gradient(to right, #004080, #0088cc);
-  }
-</style>
 </head>
 <body>
 <header><span class="welcome-text welcome-right">Καλώς ήρθατε</span><span class="welcome-text welcome-left">Добре дошли</span>
@@ -928,9 +770,9 @@ label[for="file"]:hover {
 <p>Предлагам конкурентни цени за качествени преводи. Всеки проект се оценява индивидуално според обема, сложността и срока за изпълнение.</p>
 <p>Προσφέρω ανταγωνιστικές τιμές για ποιοτικές μεταφράσεις. Κάθε έργο αξιολογείται ξεχωριστά ανάλογα με τον όγκο, τη δυσκολία και τον χρόνο παράδοσης.</p>
 <h3 style="margin-top: 2rem;">📩 Заявете превод онлайн / Υποβάλετε αίτημα για μετάφραση</h3>
-
-<form action="https://formspree.io/f/mwkgrgdo" method="POST">
-<input id="filelink" name="filelink" type="hidden"/>
+<form action="https://formsubmit.co/el/luvipu" enctype="multipart/form-data" method="POST"><input name="_next" type="hidden" value="https://www.prevodigr.eu/thanks.html"/><input name="_captcha" type="hidden" value="false"/>
+<input name="_next" type="hidden" value="https://www.prevodigr.eu/thanks.html"/>
+<input name="_captcha" type="hidden" value="false"/>
 <label for="name">Име / Όνομα:</label>
 <input id="name" name="name" required="" type="text"/>
 <label for="email">Имейл / Email:</label>
@@ -939,47 +781,15 @@ label[for="file"]:hover {
 <input id="phone" name="phone" type="tel"/>
 <label for="message">Описание / Περιγραφή:</label>
 <textarea id="message" name="message" required="" rows="4"></textarea>
-<label>📎 Прикачване на файл / Επισύναψη αρχείου:</label>
-<input data-clearable="" data-crop="disabled" data-multiple="false" id="uploadcare" name="filelink" role="uploadcare-uploader" type="hidden">
+<label for="file">📎 Прикачване на файл / Επισύναψη αρχείου:</label>
+<input accept=".pdf,.doc,.docx,.jpg,.png" id="file" name="file" required="" type="file"/>
+<p id="file-name"></p>
+<label class="checkbox-label">
+<input name="gdpr" required="" type="checkbox"/>
+    Съгласен съм с <a href="privacy.html" target="_blank">политиката за поверителност / πολιτική απορρήτου</a>
+</label>
 <button type="submit">📤 Изпрати заявка / Υποβολή αιτήματος</button>
-</input></form>
-<script>
-  UPLOADCARE_PUBLIC_KEY = 'demopublickey'; // заменя се при нужда с твой ключ
-  uploadcare.registerTab('preview', uploadcareTabEffects);
-</script>
-<script src="https://ucarecdn.com/libs/widget/3.x/uploadcare.full.min.js"></script>
-
-<script>
-  const fileInput = document.getElementById("file-upload");
-  const status = document.getElementById("file-status");
-  const fileLinkInput = document.getElementById("filelink");
-
-  fileInput.addEventListener("change", async () => {
-    const file = fileInput.files[0];
-    if (!file) return;
-
-    status.textContent = "Качване на файл...";
-
-    const formData = new FormData();
-    formData.append("file", file);
-
-    try {
-      const response = await fetch("https://file.io", {
-        method: "POST",
-        body: formData
-      });
-      const result = await response.json();
-      if (result.success) {
-        fileLinkInput.value = result.link;
-        status.textContent = "✅ Файлът е качен успешно.";
-      } else {
-        status.textContent = "❌ Неуспешно качване.";
-      }
-    } catch (error) {
-      status.textContent = "⚠️ Грешка при качване.";
-    }
-  });
-</script>
+</form>
 <script>
   const fileInput = document.getElementById('file');
   const fileName = document.getElementById('file-name');
@@ -1100,47 +910,5 @@ document.addEventListener("DOMContentLoaded", function () {
     });
   }
 });
-</script><script>
-    const fileInput = document.getElementById("file-upload");
-    const status = document.getElementById("file-status");
-    const fileLinkInput = document.getElementById("filelink");
-    const submitButton = document.getElementById("submit-button");
-
-    fileInput.addEventListener("change", async () => {
-      const file = fileInput.files[0];
-      if (!file) return;
-
-      status.textContent = "Качване на файл...";
-      submitButton.disabled = true;
-
-      const formData = new FormData();
-      formData.append("file", file);
-
-      try {
-        const response = await fetch("https://file.io", {
-          method: "POST",
-          body: formData
-        });
-        const result = await response.json();
-        if (result.success && result.link) {
-          fileLinkInput.value = result.link;
-          status.textContent = "✅ Файлът е качен успешно.";
-          submitButton.disabled = false;
-        } else {
-          status.textContent = "❌ Неуспешно качване.";
-          fileLinkInput.value = "";
-        }
-      } catch (error) {
-        status.textContent = "⚠️ Грешка при качване.";
-        fileLinkInput.value = "";
-      }
-    });
-
-    document.getElementById("myForm").addEventListener("submit", function(e) {
-      if (!fileLinkInput.value) {
-        e.preventDefault();
-        alert("Моля, изчакайте качването на файла да завърши!");
-      }
-    });
-  </script></body>
+</script></body>
 </html>
