--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>Plamen Mollov – Преводи от и на гръцки език</title>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600&amp;display=swap" rel="stylesheet"/>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600&display=swap" rel="stylesheet">
 <style>
     
 /* GDPR checkbox styling */
@@ -35,7 +35,12 @@ body {
       background: linear-gradient(to bottom, #fff, #f0f8ff);
       color: #333;
     }
-    
+    header {
+      background-color: #002b5c;
+      color: white;
+      padding: 1rem;
+      text-align: center;
+    }
     header img {
       height: 160px;
     }
@@ -143,7 +148,12 @@ button:hover {
 button:active {
   transform: scale(0.96);
 }
-
+button:hover::after {
+  content: " 👋";
+  position: absolute;
+  right: -2rem;
+  animation: wave 1s infinite;
+}
 @keyframes wave {
   0% { transform: rotate(0deg); }
   25% { transform: rotate(20deg); }
@@ -171,136 +181,6 @@ button:active {
   0%   { transform: translateY(0px); opacity: 0; }
   50%  { transform: translateY(-5px); opacity: 1; }
   100% { transform: translateY(-10px); opacity: 0; }
-}
-
-
-
-  10% {
-    opacity: 1;
-  }
-  50% {
-    top: 60%;
-    opacity: 1;
-  }
-  90% {
-    opacity: 1;
-  }
-  100% {
-    top: 100%;
-    opacity: 0;
-  }
-}
-
-@media (max-width: 768px) {
-  
-  10% {
-    opacity: 1;
-  }
-  50% {
-    top: 60%;
-    opacity: 1;
-  }
-  90% {
-    opacity: 1;
-  }
-  100% {
-    top: 100%;
-    opacity: 0;
-  }
-}
-
-
-
-
-header {
-  background-color: #002b5c;
-  color: white;
-  padding: 1rem;
-  text-align: center;
-  position: relative;
-  overflow: hidden;
-}
-
-.welcome-text {
-  position: absolute;
-  font-family: 'Noto Serif', serif;
-  font-size: 2.2rem;
-  white-space: nowrap;
-  color: white;
-  z-index: 10;
-  animation: scrollVertical 10s linear infinite; animation-delay: 0s; animation-delay: 0s;
-  writing-mode: vertical-rl;
-  text-orientation: mixed;
-  transform: rotate(180deg);
-}
-
-.welcome-left {
-  left: 10px;
-}
-
-.welcome-right {
-  right: 10px;
-}
-
-
-@keyframes scrollVertical {
-  0% { top: -80%; opacity: 1; }
-  100% { top: 100%; opacity: 1; }
-  0% {
-    top: -100%;
-    opacity: 1;
-  }
-  100% {
-    top: 100%;
-    opacity: 1;
-  }
-}
-
-  10% {
-    opacity: 1;
-  }
-  50% {
-    top: 40%;
-    opacity: 1;
-  }
-  90% {
-    opacity: 1;
-  }
-  100% {
-    top: 100%;
-    opacity: 0;
-  }
-}
-
-
-
-
-@media (max-width: 768px) {
-  .welcome-text {
-    font-size: 1.1rem !important;
-    font-weight: 400 !important;
-    opacity: 0.85 !important;
-  }
-}
-
-
-@media (max-width: 768px) {
-  .welcome-text {
-    animation-duration: 12s !important;
-    animation-delay: 0s !important;
-    opacity: 1 !important;
-  }
-}
-
-
-@media (max-width: 768px) {
-  .welcome-text {
-    font-size: 1.4rem !important;
-    font-weight: 400 !important;
-    opacity: 1 !important;
-    animation: scrollVertical 14s linear infinite !important;
-    animation-delay: 0s !important;
-  }
 }
 
 </style>
@@ -356,26 +236,6 @@ header {
   100% { transform: translateY(-10px); opacity: 0; }
 }
 
-
-@media (max-width: 768px) {
-  .welcome-text {
-    animation-duration: 12s !important;
-    animation-delay: 0s !important;
-    opacity: 1 !important;
-  }
-}
-
-
-@media (max-width: 768px) {
-  .welcome-text {
-    font-size: 1.4rem !important;
-    font-weight: 400 !important;
-    opacity: 1 !important;
-    animation: scrollVertical 14s linear infinite !important;
-    animation-delay: 0s !important;
-  }
-}
-
 </style>
 <script>
   document.addEventListener("DOMContentLoaded", function() {
@@ -408,293 +268,12 @@ header {
     "availableLanguage": ["Bulgarian", "Greek"]
   }
 }
-</script><style>
-
-  50% { opacity: 1; transform: translateY(0); }
-}
-
-
-
-@media (max-width: 768px) {
-  .welcome-text {
-    animation-duration: 12s !important;
-    animation-delay: 0s !important;
-    opacity: 1 !important;
-  }
-}
-
-
-@media (max-width: 768px) {
-  .welcome-text {
-    font-size: 1.4rem !important;
-    font-weight: 400 !important;
-    opacity: 1 !important;
-    animation: scrollVertical 14s linear infinite !important;
-    animation-delay: 0s !important;
-  }
-}
-
-</style><link href="https://fonts.googleapis.com/css2?family=Parisienne&amp;display=swap" rel="stylesheet"/><link href="https://fonts.googleapis.com/css2?family=Noto+Serif&amp;display=swap" rel="stylesheet"/>
-<style>
-/* Responsive форма */
-#prices form {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  max-width: 600px;
-  margin: 0 auto;
-  padding: 1rem;
-}
-#prices input, #prices textarea, #prices button, #prices label {
-  font-size: 1rem;
-  padding: 0.6rem;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  width: 100%;
-  box-sizing: border-box;
-}
-#prices button {
-  background-color: #003366;
-  color: white;
-  font-weight: bold;
-  cursor: pointer;
-  border: none;
-}
-#prices button:hover {
-  background-color: #0055a5;
-}
-#prices .gdpr-label {
-  display: flex;
-  align-items: center;
-  gap: 0.5rem;
-  font-size: 0.9rem;
-}
-
-/* Responsive заглавие и текст */
-#prices h2, #prices p, #prices h3 {
-  text-align: center;
-  margin-bottom: 1rem;
-}
-@media (max-width: 600px) {
-  #prices h2, #prices p, #prices h3 {
-    font-size: 1.1rem;
-  }
-  #prices input, #prices textarea, #prices button {
-    font-size: 0.95rem;
-  }
-}
-</style><style>
-/* По-елегантна форма и секция */
-#prices {
-  background: linear-gradient(to bottom, #f7faff, #ffffff);
-  padding: 3rem 1rem;
-  border-radius: 12px;
-  box-shadow: 0 8px 20px rgba(0,0,0,0.05);
-  margin: 2rem auto;
-  max-width: 900px;
-}
-#prices h2 {
-  font-size: 2rem;
-  color: #003366;
-  margin-bottom: 1rem;
-}
-#prices h3 {
-  font-size: 1.4rem;
-  color: #003366;
-}
-#prices p {
-  font-size: 1.1rem;
-  color: #333;
-}
-#prices form {
-  display: flex;
-  flex-direction: column;
-  gap: 1.2rem;
-  max-width: 600px;
-  margin: 2rem auto 0;
-  padding: 1.5rem;
-  background: #fff;
-  border: 1px solid #dde3ed;
-  border-radius: 10px;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.06);
-}
-#prices input, #prices textarea, #prices button {
-  font-size: 1rem;
-  padding: 0.75rem 1rem;
-  border: 1px solid #ccc;
-  border-radius: 6px;
-  width: 100%;
-  box-sizing: border-box;
-}
-#prices input:focus, #prices textarea:focus {
-  border-color: #0077cc;
-  outline: none;
-}
-#prices button {
-  background-color: #003366;
-  color: white;
-  font-weight: bold;
-  cursor: pointer;
-  transition: background 0.3s;
-}
-#prices button:hover {
-  background-color: #0055a5;
-}
-#prices .gdpr-label {
-  display: flex;
-  align-items: center;
-  gap: 0.5rem;
-  font-size: 0.95rem;
-}
-@media (max-width: 768px) {
-  #prices {
-    padding: 2rem 1rem;
-  }
-  #prices h2 {
-    font-size: 1.5rem;
-  }
-  #prices form {
-    padding: 1rem;
-  }
-}
-</style><style>
-#file {
-  display: none;
-}
-label[for="file"] {
-  display: inline-block;
-  padding: 0.8rem 1.5rem;
-  background-color: #004a99;
-  color: white;
-  border-radius: 6px;
-  cursor: pointer;
-  font-weight: 600;
-  font-size: 1rem;
-  margin-bottom: 1rem;
-  transition: background 0.3s ease;
-}
-label[for="file"]:hover {
-  background-color: #0066cc;
-}
-</style><style>
-#file {
-  display: none;
-}
-label[for="file"] {
-  display: inline-block;
-  padding: 0.8rem 1.5rem;
-  background-color: #004a99;
-  color: white;
-  border-radius: 6px;
-  cursor: pointer;
-  font-weight: 600;
-  font-size: 1rem;
-  margin-bottom: 0.5rem;
-  transition: background 0.3s ease;
-}
-label[for="file"]:hover {
-  background-color: #0066cc;
-}
-#file-name {
-  font-size: 0.95rem;
-  color: #333;
-  margin-bottom: 1rem;
-  text-align: center;
-  font-style: italic;
-}
-</style>
-<style>
-  form {
-    background: #ffffff;
-    border-radius: 12px;
-    padding: 2rem;
-    box-shadow: 0 10px 30px rgba(0,0,0,0.05);
-    max-width: 620px;
-    margin: 3rem auto;
-    font-family: 'Segoe UI', sans-serif;
-  }
-  form label {
-    font-weight: 600;
-    display: block;
-    margin-top: 1.3rem;
-    color: #003366;
-  }
-  form input[type="text"],
-  form input[type="email"],
-  form input[type="tel"],
-  form input[type="file"],
-  form textarea {
-    width: 100%;
-    padding: 0.8rem;
-    margin-top: 0.3rem;
-    border-radius: 8px;
-    border: 1px solid #ccc;
-    font-size: 1rem;
-    background: #f9f9f9;
-  }
-  form input[type="file"] {
-    cursor: pointer;
-  }
-  form textarea {
-    resize: vertical;
-  }
-  form button {
-    margin-top: 2rem;
-    padding: 1rem;
-    width: 100%;
-    background: linear-gradient(to right, #00509e, #00aaff);
-    color: white;
-    font-weight: bold;
-    border: none;
-    font-size: 1.1rem;
-    border-radius: 10px;
-    cursor: pointer;
-    transition: background 0.3s ease;
-  }
-  form button:hover {
-    background: linear-gradient(to right, #004080, #0088cc);
-  }
-  .checkbox-label {
-    margin-top: 1.2rem;
-    font-size: 0.95rem;
-  }
-  #file-name {
-    font-style: italic;
-    margin-top: 0.5rem;
-    color: #444;
-  }
-</style>
-<script>
-  UPLOADCARE_PUBLIC_KEY = 'demopublickey';
-</script>
-<script src="https://ucarecdn.com/libs/widget/3.x/uploadcare.full.min.js"></script>
-<script>
-  UPLOADCARE_PUBLIC_KEY = 'demopublickey';
-</script>
-<script src="https://ucarecdn.com/libs/widget/3.x/uploadcare.full.min.js"></script>
-
-<style>
-.uploadcare--widget__button_type_open {
-  font-size: 1.1rem !important;
-  font-weight: 600;
-  background: linear-gradient(to right, #00509e, #007acc) !important;
-  color: white !important;
-  padding: 12px 18px !important;
-  border-radius: 8px !important;
-}
-.uploadcare--widget__button_type_open:hover {
-  background: linear-gradient(to right, #004080, #0066cc) !important;
-}
-.uploadcare--powered-by {
-  display: none !important;
-}
-</style>
-</head>
+</script></head>
 <body>
-<header><span class="welcome-text welcome-right">Καλώς ήρθατε</span><span class="welcome-text welcome-left">Добре дошли</span>
+<header>
 <img alt="Plamen Mollov Logo" src="assets/images/logo.png"/>
-<h1>Заклет преводач от и на гръцки език – Пламен Моллов</h1>
-<h2><strong>17 години опит в устни и писмени преводи, заверки, легализации и консултации</strong></h2>
+<h1>Пламен Асенов Моллов</h1>
+<h2><strong>Заклет преводач от и на гръцки език с над 17 години опит и истинска любов към езика</strong></h2>
 </header>
 <nav>
 <div class="menu-toggle">
@@ -784,48 +363,40 @@ label[for="file"]:hover {
 <li>📝 Συμβουλές και μετάφραση συμβολαίων και νομικών εγγράφων</li>
 <li>💼 Έκδοση ΑΦΜ (φορολογικού αριθμού) στην εφορία</li>
 <li>🤝 Συνοδεία σε συμβολαιογράφους, δικηγόρους, λογιστές ή κτηματομεσίτες</li>
-<li>📄 Μετάφραση και επικύρωση απαιτούμενων εγγράφων</li>
+<li>📄 Ερμηνεία και επικύρωση απαιτούμενων εγγράφων</li>
 </ul>
 <p><strong>📩 Свържете се с мен, за да уговорим индивидуална среща или консултация.<br/>
   📩 Επικοινωνήστε μαζί μου για προσωπικό ραντεβού ή συμβουλή.</strong></p>
-<p><strong><a href="https://www.dimokritosrealestate.gr/" rel="noopener noreferrer" target="_blank">Актуални оферти за недвижими имоти в Гърция / Τρέχουσες προσφορές ακινήτων στην Ελλάδα</a></strong></p>
+<p><strong><a href="https://www.dimokritosrealestate.gr/" target="_blank" rel="noopener noreferrer">Актуални оферти за недвижими имоти в Гърция / Τρέχουσες προσφορές ακινήτων στην Ελλάδα</a></strong></p></strong></p>
 </section>
 <section id="prices">
 <h2 class="section-title">Цени / Τιμές</h2>
-<p>Предлагам конкурентни цени за качествени преводи. Всеки проект се оценява индивидуално според обема, сложността и срока за изпълнение.</p>
-<p>Προσφέρω ανταγωνιστικές τιμές για ποιοτικές μεταφράσεις. Κάθε έργο αξιολογείται ξεχωριστά ανάλογα με τον όγκο, τη δυσκολία και τον χρόνο παράδοσης.</p>
-<h3 style="margin-top: 2rem;">📩 Заявете превод онлайн / Υποβάλετε αίτημα για μετάφραση</h3>
-<form action="https://formsubmit.co/el/luvipu" enctype="multipart/form-data" method="POST">
-<input name="_next" type="hidden" value="https://www.prevodigr.eu/thanks.html"/>
-<input name="_captcha" type="hidden" value="false"/>
-<label for="name">Име / Όνομα:</label>
-<input id="name" name="name" required="" type="text"/>
-<label for="email">Имейл / Email:</label>
-<input id="email" name="email" required="" type="email"/>
-<label for="phone">Телефон / Τηλέφωνο:</label>
-<input id="phone" name="phone" type="tel"/>
-<label for="message">Описание / Περιγραφή:</label>
-<textarea id="message" name="message" required="" rows="4"></textarea>
-<label for="file">📎 Прикачване на файл / Επισύναψη αρχείου:</label>
-<p id="file-name"></p>
-<label class="checkbox-label">
-<input name="gdpr" required="" type="checkbox"/>
-    Съгласен съм с <a href="privacy.html" target="_blank">политиката за поверителност / πολιτική απορρήτου</a>
+<p style="text-align: justify;">
+<p><em>Цените се договарят индивидуално според сложността, обема и сроковете.</em></p>
+<p><em>Οι τιμές καθορίζονται μεμονωμένα, ανάλογα με τη δυσκολία του κειμένου, τον όγκο και τα χρονικά περιθώρια παράδοσης.</em></p>
+<div style="margin-top: 2rem; border-top: 2px solid #ccc; padding-top: 2rem;">
+<h3>Попълни формата и поискай своята оферта още днес!<br/>Συμπλήρωσε τη φόρμα και ζήτησε την προσφορά σου σήμερα!</h3>
+<form action="https://formsubmit.co/mollovplamen@gmail.com" enctype="multipart/form-data" method="POST">
+<input name="Име и фамилия" placeholder="Име и фамилия / Ονοματεπώνυμο" required="" type="text"/>
+<input name="Имейл" placeholder="Имейл адрес / Email" required="" type="email"/>
+<input name="Телефон" placeholder="Телефон / Τηλέφωνο" required="" type="tel"/>
+<textarea name="Описание" placeholder="Кратко описание... / Περιγραφή..." required="" rows="4"></textarea>
+<label for="attachment"><strong>📎 Прикачен файл / Επισύναψη αρχείου:</strong></label>
+<input id="attachment" name="attachment" required type="file">
+
+
+
+
+
+<label class="gdpr-label">
+  <input type="checkbox" name="gdpr" required>
+  Съгласен/на съм / Συμφωνώ με την <a href="privacy.html" target="_blank">Политиката за поверителност / Πολιτική απορρήτου</a>
 </label>
-<input data-clearable="true" data-label="📎 Прикачване на файл / Επισύναψη αρχείου" data-locale="auto" data-multiple="false" data-tabs="file url camera facebook gdrive dropbox" name="filelink" role="uploadcare-uploader" style="margin-top: 10px; display:block;" type="hidden"/><button type="submit">📤 Изпрати заявка / Υποβολή αιτήματος</button>
+<button type="submit">Изпрати / Αποστολή</button>
+<input name="_captcha" type="hidden" value="false"/>
 </form>
-<script>
-  const fileInput = document.getElementById('file');
-  const fileName = document.getElementById('file-name');
-  fileInput.addEventListener('change', () => {
-    if (fileInput.files.length > 0) {
-      fileName.textContent = "📎 Избран файл: " + fileInput.files[0].name;
-    } else {
-      fileName.textContent = "";
-    }
-  });
-</script>
-</section>
+</div>
+</p></section>
 <section id="testimonials">
 <h2 class="section-title">Мнения на клиенти /  Αξιολογήσεις πελατών</h2>
 <div class="testimonial">
@@ -842,16 +413,17 @@ label[for="file"]:hover {
 </div>
 <div style="margin-top: 2rem;">
 <h3>🗣️ Споделете вашето мнение / Αφήστε την αξιολόγηση σας</h3>
-<form action="https://formspree.io/f/movwnrdg" enctype="multipart/form-data" method="POST">
-<input name="_captcha" type="hidden" value="false"/>
+<form action="https://formsubmit.co/mollovplamen@gmail.com" method="POST">
 <input name="Име/Όνομα" placeholder="Вашето име / Το όνομα σας" required="" type="text"/>
 <textarea name="Мнение/Αξιολόγηση" placeholder="Вашето мнение / Η αξιολόγηση σας" required="" rows="4"></textarea>
+
 <label class="gdpr-label">
-<input name="gdpr" required="" type="checkbox"/>
+  <input type="checkbox" name="gdpr" required>
   Съгласен/на съм / Συμφωνώ με την <a href="privacy.html" target="_blank">Политиката за поверителност / Πολιτική απορρήτου</a>
 </label>
 <button type="submit">Изпрати / Αποστολή</button>
 <input name="_subject" type="hidden" value="Ново клиентско мнение / Νέα αξιολόγηση πελάτη"/>
+<input name="_captcha" type="hidden" value="false"/>
 </form>
 </div>
 </section>
@@ -865,74 +437,5 @@ label[for="file"]:hover {
 <p>© 2025 Пламен Моллов – Заклет преводач с гръцки език</p>
 <p>🇧🇬 България | Ελλάδα 🇬🇷</p>
 </footer>
-<script>
-document.addEventListener("DOMContentLoaded", function () {
-  const forms = document.querySelectorAll("form[action*='formspree.io']");
-  forms.forEach(form => {
-    const button = form.querySelector('button[type="submit"]');
-    const fileInput = form.querySelector('input[type="file"]');
-
-    form.addEventListener("submit", function (e) {
-      e.preventDefault();
-
-      if (fileInput && fileInput.files.length > 0 && fileInput.files[0].size > 10 * 1024 * 1024) {
-        alert("Файлът е твърде голям. Моля, прикачете файл до 10MB.");
-        return;
-      }
-
-      button.disabled = true;
-      button.innerText = "Изпраща се...";
-      button.style.opacity = "0.6";
-
-      const data = new FormData(form);
-      fetch(form.action, {
-        method: form.method,
-        body: data,
-        headers: {
-          'Accept': 'application/json'
-        }
-      })
-      .then(response => {
-        if (response.ok) {
-          window.location.href = "thanks.html";
-        } else {
-          alert("Възникна грешка при изпращането. Моля, опитайте отново.");
-          button.disabled = false;
-          button.innerText = "Изпрати / Αποστολή";
-          button.style.opacity = "1";
-        }
-      })
-      .catch(error => {
-        alert("Възникна грешка при изпращането.");
-        button.disabled = false;
-        button.innerText = "Изпрати / Αποστολή";
-        button.style.opacity = "1";
-      });
-    });
-  });
-});
-</script>
-<script>
-    const form = document.querySelector('form');
-    const button = document.getElementById('submit-btn');
-    form.addEventListener('submit', () => {
-      button.disabled = true;
-      button.innerText = "Изпращане... / Αποστολή...";
-      button.style.opacity = "0.7";
-    });
-    </script><script>
-document.addEventListener("DOMContentLoaded", function () {
-  const fileInput = document.getElementById("file");
-  const fileNameDisplay = document.getElementById("file-name");
-  if (fileInput && fileNameDisplay) {
-    fileInput.addEventListener("change", function () {
-      if (fileInput.files.length > 0) {
-        fileNameDisplay.textContent = "📁 " + fileInput.files[0].name;
-      } else {
-        fileNameDisplay.textContent = "";
-      }
-    });
-  }
-});
-</script></body>
+</body>
 </html>
